Canvas and scrollbar fixes
Also, I started breaking down the D3 date graphic. Would have helped if Bostock wrote some comments. :P

--- a/app.css
+++ b/app.css
@@ -218,6 +218,7 @@ div.sidepanel div.panelbar span {
     margin:62px 0 0 0;
     position:fixed;
     overflow:auto;
+    white-space:nowrap;
 }
 
 #ticker {
